# QweninCuda

./: .gitignore  CMakeLists.txt  README.md  perf_optimization_log.md  run_demo.sh
include/: common.hpp  kernels.cuh  model.hpp
scripts/: benchmark.sh  check_logits_alignment.py  compare_06b_17b.sh  convert_qwen3_to_qmini.py  qa5_smoke_test.py  run_chat.py
src/: kernels.cu  main.cpp  model.cpp
